@@ -1,0 +1,104 @@
+/* XPM */
+static char * aao_xpm[] = {
+"15 15 86 1",
+" 	c None",
+".	c #080808",
+"+	c #242424",
+"@	c #232323",
+"#	c #262628",
+"$	c #121321",
+"%	c #10101E",
+"&	c #10111E",
+"*	c #121320",
+"=	c #280E1A",
+"-	c #3F0B13",
+";	c #410D16",
+">	c #3E0A13",
+",	c #400C15",
+"'	c #420E17",
+")	c #2D2627",
+"!	c #252529",
+"~	c #202241",
+"{	c #561B35",
+"]	c #8B1428",
+"^	c #332326",
+"/	c #551B34",
+"(	c #5A5B72",
+"_	c #4B4D66",
+":	c #A14151",
+"<	c #A95160",
+"[	c #343652",
+"}	c #38383A",
+"|	c #4D4D53",
+"1	c #232543",
+"2	c #7A4C5F",
+"3	c #8C172B",
+"4	c #604B4E",
+"5	c #3E3839",
+"6	c #94293B",
+"7	c #575866",
+"8	c #48484B",
+"9	c #363637",
+"0	c #5D5E6C",
+"a	c #7E7F8F",
+"b	c #CAC3C4",
+"c	c #B1707B",
+"d	c #9E5A65",
+"e	c #343435",
+"f	c #4A4A4D",
+"g	c #86525B",
+"h	c #302326",
+"i	c #87364A",
+"j	c #282728",
+"k	c #515153",
+"l	c #404040",
+"m	c #4C4445",
+"n	c #A47179",
+"o	c #FFFFFF",
+"p	c #6A6A76",
+"q	c #4B4649",
+"r	c #3F3F3F",
+"s	c #525253",
+"t	c #282828",
+"u	c #523D56",
+"v	c #272528",
+"w	c #815159",
+"x	c #413537",
+"y	c #72555A",
+"z	c #302A2B",
+"A	c #A1868B",
+"B	c #694E59",
+"C	c #8D8E98",
+"D	c #2B2B2C",
+"E	c #585860",
+"F	c #36373A",
+"G	c #565763",
+"H	c #996770",
+"I	c #93424F",
+"J	c #8F505A",
+"K	c #9D5965",
+"L	c #561B34",
+"M	c #606173",
+"N	c #565768",
+"O	c #4A4B60",
+"P	c #6C6D7A",
+"Q	c #2C2526",
+"R	c #3D0911",
+"S	c #250C17",
+"T	c #0E0F1C",
+"U	c #131421",
+".+@@@@@@@@@@@+.",
+"#$%%&$*=-;>>,')",
+"!~~~~~~{]]]]]]^",
+"!~~~~~~/]]]]]]^",
+"!~~(_~~{]]:<]]^",
+"!~[}|1~2]3456]^",
+"!~7890abcdefg]^",
+"hijklmnopqrstuv",
+"^wxyyzABCDEEFG!",
+"^HI]]JKLMN~~OP!",
+"^]]]]]]{~~~~~~!",
+"^]]]]]]/~~~~~~!",
+"^]]]]]]L~~~~~~!",
+"Q;RRRRRSTTTTTU#",
+".+@@@@@@@@@@@+."};
